--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -1,127 +1,3 @@
-/*
-* 	Owl Carousel Owl Demo Theme 
-*	v1.24
-*/
-.caption{
-         display:none;
-         top:1px;
-         width:99%;
-         position:absolute;
-      	 background: rgba(218, 218, 219, 0.46);
-		height:99%;
-		text-align: center;
-}
-#owl-demo .item:hover div.caption{
-     display:block;
-     transition: all 0.3s ease; 
-     -webkit-transition: all 0.3s ease;
-     -moz-transition: all 0.3s ease;
-	 -o-transition: all 0.3s ease;
-}
-.caption span{
-    background: url(../images/hover-img.png) no-repeat 0px 0px;
-    width:80px;
-	height:80px;
-    display: inline-block;
-    cursor: pointer;
-  	 margin:23% 0px;
-}
-    #owl-demo .item{
-        margin: 3px;
-    }
-    #owl-demo .item img{
-     height: auto;
-     width:100%;
-    transition: 0.5s all;
-	-webkit-transition: 0.5s all;
-	-moz-transition: 0.5s all;
-	-o-transition: 0.5s all;
-	cursor: pointer;
-    }
-.owl-theme .owl-controls{
-	margin-top: 18px;
-	text-align: center;
-	position: absolute;
-	top: -57px;
-	right: 14px;
-}
-
-/* Styling Next and Prev buttons */
-
-.owl-theme .owl-controls .owl-buttons div{
-	color: #FFF;
-	display: inline-block;
-	zoom: 1;
-	margin: 5px;
-	padding: 3px 10px;
-	font-size: 12px;
-	width: 13px;
-	height: 17px;
-}
-.owl-next{
-	background: url(../images/pagnate.png) no-repeat -10px 0px;
-	position: absolute;
-	right: 2%;
-	top: 95%;
-}
-.owl-prev{
-	background: url(../images/pagnate.png) no-repeat 0px 0px;
-	position: absolute;
-	right: 3%;
-	top: 95%;
-}
-/* Clickable class fix problem with hover on touch devices */
-/* Use it for non-touch hover action */
-.owl-theme .owl-controls.clickable .owl-buttons div:hover{
-	filter: Alpha(Opacity=100);/*IE7 fix*/
-	opacity: 1;
-	text-decoration: none;
-}
-
-/* Styling Pagination*/
-
-.owl-theme .owl-controls .owl-page{
-	display: inline-block;
-	zoom: 1;
-	*display: inline;/*IE7 life-saver */
-}
-.owl-theme .owl-controls .owl-page span{
-	display: block;
-	width: 12px;
-	height: 12px;
-	margin: 5px 7px;
-	filter: Alpha(Opacity=50);/*IE7 fix*/
-	opacity: 0.5;
-	-webkit-border-radius: 20px;
-	-moz-border-radius: 20px;
-	border-radius: 20px;
-	background: #2ECC71;
-}
-
-.owl-theme .owl-controls .owl-page.active span,
-.owl-theme .owl-controls.clickable .owl-page:hover span{
-	filter: Alpha(Opacity=100);/*IE7 fix*/
-	opacity: 1;
-}
-
-/* If PaginationNumbers is true */
-
-.owl-theme .owl-controls .owl-page span.owl-numbers{
-	height: auto;
-	width: auto;
-	color: #FFF;
-	padding: 2px 10px;
-	font-size: 12px;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	border-radius: 30px;
-}
-
-/* preloading images */
-.owl-item.loading{
-	min-height: 150px;
-	background: url(AjaxLoader.gif) no-repeat center center
-}
 /* 
  * 	Core Owl Carousel CSS File
  *	v1.24
@@ -138,12 +14,10 @@
 }
 /* display none until init */
 .owl-carousel{
-	display: none;
 	position: relative;
 	-ms-touch-action: pan-y;
-	margin: 0em auto;
-	text-align: center;
-	padding: 1em 0;
+	background: url(../images/divice1.png) no-repeat 50%;
+	min-height: 600px;
 }
 .owl-carousel .owl-wrapper{
 	display: none;
@@ -154,6 +28,8 @@
 	overflow: hidden;
 	position: relative;
 	width: 100%;
+	top: 6.8em;
+	right: -2.4em;
 }
 .owl-carousel .owl-wrapper-outer.autoHeight{
 	-webkit-transition: height 500ms ease-in-out;
@@ -165,7 +41,6 @@
 	
 .owl-carousel .owl-item{
 	float: left;
-	margin: 1px 2px;
 }
 .owl-controls .owl-page,
 .owl-controls .owl-buttons div{
@@ -356,60 +231,106 @@
 @keyframes scaleUpTo {
   to { opacity: 0; transform: scale(1.5); }
 }
-/*----responsive-mediaquries-----*/
-@media(max-width:1366px){
-	.caption span {
-	margin: 21% 0px;
+@media only screen and (max-width: 1280px) and (min-width:1024px) {
+	.owl-carousel .owl-wrapper-outer {
+		top: 6.8em;
+		right: -2.2em;
 	}
 }
-@media(max-width:1366px){
+@media only screen and (max-width: 1024px) and (min-width:768px) {
+	.owl-carousel .owl-wrapper-outer {
+		top: 4.2em;
+		right: -0.1em;
+		width: 25%;
+		margin: 0 auto;
+	}
+	.img-cursual {
+		width: 73%;
+	}
+	.owl-carousel {
+		background: url(../images/divice2.png) no-repeat 50%;
+		min-height: 428px;
+	}
 	.owl-carousel .owl-item {
-	float: left;
-	margin: 1px 0px;
 	}
 }
-@media(max-width:1366px){
-	.caption span {
-	margin: 20% 0px;
+@media only screen and (max-width: 768px) and (min-width:640px) {
+	.owl-carousel .owl-wrapper-outer {
+		top: 5.5em;
+		right: -0.1em;
+		width: 44%;
+		margin: 0 auto;
+	}
+	.img-cursual {
+		width: 73%;
+	}
+	.owl-carousel {
+		background: url(../images/divice1.png) no-repeat 50%;
+		min-height:559px;
 	}
 }
-@media(max-width:1024px){
-	.caption span {
-	width: 65px;
-	height: 66px;
-	margin: 19% 0px;
-	background-size: 100%;
+@media only screen and (max-width: 640px) and (min-width:480px) {
+	.owl-carousel .owl-wrapper-outer {
+		top: 5.95em;
+		right: -0.1em;
+		width: 50.1%;
+		margin: 0 auto;
+	}
+	.img-cursual {
+		width: 73%;
+	}
+	.owl-carousel {
+		background: url(../images/640divice.png) no-repeat 50%;
+		min-height:559px;
+	}
+	.panel-left span {
+		background: url(../images/sdual-divice.png) no-repeat 0px 0px;
+		margin:0 auto;
+		width:250px;
+		height:366px;
+	}
+	.panel-left {
+		float: none;
+		width:100%;
+		margin-right: 0%;
+		text-align:center;
 	}
 }
-@media(max-width:768px){
-	.caption span {
-	width: 65px;
-	height: 66px;
-	margin: 24% 0px;
-	background-size: 100%;
+@media only screen and (max-width: 480px) and (min-width:320px) {
+	.owl-carousel .owl-wrapper-outer {
+		top: 5.5em;
+		right: -0.1em;
+		width: 70%;
+		margin: 0 auto;
+	}
+	.img-cursual {
+		width: 73%;
+	}
+	.owl-carousel {
+		background: url(../images/divice1.png) no-repeat 50%;
+		min-height:559px;
+	}
+	.panel-left span {
+		background: url(../images/sdual-divice.png) no-repeat 0px 0px;
+		margin:0 auto;
+		width:250px;
+		height:366px;
+	}
+	.panel-left {
+		float: none;
+		width:100%;
+		margin-right: 0%;
+		text-align:center;
 	}
 }
-@media(max-width:640px){
-	.owl-theme .owl-controls {
-	margin-top: 18px;
-	top: -38px;
-	right: 14px;
-	}
-}
-
-@media(max-width:480px){
-	.owl-controls{
+@media only screen and (max-width: 320px) and (min-width:240px) {
+	.img-cursual {
 		display:none;
 	}
-	.owl-pagination{
-		display:none !important;
-	}
-}
-@media(max-width:320px){
-	.owl-controls{
-		display:none;
-	}
-	.owl-pagination{
-		display:none !important;
+	.panel-left span {
+		background: url(../images/320dual.png) no-repeat 0px 0px;
+		margin: 0 auto;
+		width:150px;
+		height:220px;
 	}
 }
