--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -28,8 +28,8 @@
 	overflow: hidden;
 	position: relative;
 	width: 100%;
-	top: 6.8em;
-	right: -2.4em;
+	top: 4.8em;
+	right: -1.4em;
 }
 .owl-carousel .owl-wrapper-outer.autoHeight{
 	-webkit-transition: height 500ms ease-in-out;
@@ -233,36 +233,34 @@
 }
 @media only screen and (max-width: 1280px) and (min-width:1024px) {
 	.owl-carousel .owl-wrapper-outer {
-		top: 6.8em;
-		right: -2.2em;
+		top: 4.8em;
+		margin: 0 auto;
 	}
 }
+
+
 @media only screen and (max-width: 1024px) and (min-width:768px) {
 	.owl-carousel .owl-wrapper-outer {
-		top: 4.2em;
-		right: -0.1em;
-		width: 25%;
+		top: 2em;
+		width: 100%;
 		margin: 0 auto;
 	}
 	.img-cursual {
-		width: 73%;
+		width: 100%;
 	}
 	.owl-carousel {
 		background: url(../images/divice2.png) no-repeat 50%;
 		min-height: 428px;
 	}
-	.owl-carousel .owl-item {
-	}
 }
 @media only screen and (max-width: 768px) and (min-width:640px) {
 	.owl-carousel .owl-wrapper-outer {
-		top: 5.5em;
-		right: -0.1em;
-		width: 44%;
+		top: 4.5em;
+		width: 100%;
 		margin: 0 auto;
 	}
 	.img-cursual {
-		width: 73%;
+		width: 100%;
 	}
 	.owl-carousel {
 		background: url(../images/divice1.png) no-repeat 50%;
@@ -271,13 +269,12 @@
 }
 @media only screen and (max-width: 640px) and (min-width:480px) {
 	.owl-carousel .owl-wrapper-outer {
-		top: 5.95em;
-		right: -0.1em;
-		width: 50.1%;
+		top: 2.95em;
+		width: 100%;
 		margin: 0 auto;
 	}
 	.img-cursual {
-		width: 73%;
+		width: 100%;
 	}
 	.owl-carousel {
 		background: url(../images/640divice.png) no-repeat 50%;
@@ -297,14 +294,17 @@
 	}
 }
 @media only screen and (max-width: 480px) and (min-width:320px) {
-	.owl-carousel .owl-wrapper-outer {
-		top: 5.5em;
-		right: -0.1em;
-		width: 70%;
+	.owl-carousel {
+		width: 90%;
+		margin: 0 auto;
+		right: -2em;
+	}
+	
+	.owl-wrapper-outer {
 		margin: 0 auto;
 	}
 	.img-cursual {
-		width: 73%;
+		width: 100%;
 	}
 	.owl-carousel {
 		background: url(../images/divice1.png) no-repeat 50%;
