--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,3 @@
-
-
 <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
         <div class="col-lg-12">
@@ -15,11 +13,11 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-2">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="label label-success pull-right">Monthly</span>
-                    <h5>Income</h5>
+                    <h5>Droped</h5>
                 </div>
                 <div class="ibox-content">
                     <h1 class="no-margins">{{main.total}}</h1>
@@ -28,11 +26,24 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-2">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-success pull-right">Monthly</span>
+                    <h5>In recognition</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">{{main.total}}</h1>
+                    <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
+                    <small>Total income</small>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-2">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="label label-info pull-right">Annual</span>
-                    <h5>Orders</h5>
+                    <h5>In Approval</h5>
                 </div>
                 <div class="ibox-content">
                     <h1 class="no-margins">275,800</h1>
@@ -41,11 +52,11 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-2">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="label label-primary pull-right">Today</span>
-                    <h5>visits</h5>
+                    <h5>For reconcilation</h5>
                 </div>
                 <div class="ibox-content">
                     <h1 class="no-margins">106,120</h1>
@@ -54,11 +65,24 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-2">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="label label-danger pull-right">Low value</span>
-                    <h5>User activity</h5>
+                    <h5>Ready to sync with books</h5>
+                </div>
+                <div class="ibox-content">
+                    <h1 class="no-margins">80,600</h1>
+                    <div class="stat-percent font-bold text-danger">38% <i class="fa fa-level-down"></i></div>
+                    <small>In first month</small>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-2">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <span class="label label-danger pull-right">Low value</span>
+                    <h5>Books</h5>
                 </div>
                 <div class="ibox-content">
                     <h1 class="no-margins">80,600</h1>
@@ -79,7 +103,7 @@
                 </div>
                 <div class="ibox-content">
                     <form action="#" class="dropzone dz-clickable" dropzone="" id="dropzone">
-                        <div class="dz-default dz-message"><span><strong>Drop files here or click to upload. </strong><br> (This is just a demo dropzone. Selected files are not actually uploaded.)</span></div>
+                        <div class="dz-default dz-message"><span><strong>Drop files here or click to upload. </strong><br> (This is a place where you can drop all your expenses to be captured and approved.)</span></div>
                         </form>
                     <div class="m text-right">
                         <small>DropzoneJS is an open source library that provides drag'n'drop file uploads with image previews: <a href="https://github.com/enyo/dropzone" target="_blank">https://github.com/enyo/dropzone</a>
