--- a/app/views/common/navigation.html
+++ b/app/views/common/navigation.html
@@ -1,5 +1,5 @@
 <nav class="navbar-default navbar-static-side" role="navigation">
-    <div class="sidebar-collapse">
+    <div class="sidebar-collapse" full-scroll>
         <ul side-navigation class="nav metismenu" id="side-menu">
             <li class="nav-header">
 
@@ -23,10 +23,10 @@
             </li>
 
             <li ui-sref-active="active">
-                <a ui-sref="index.main"><i class="fa fa-laptop"></i> <span class="nav-label">Main page</span> </a>
+                <a ui-sref="index.main"><i class="fa fa-laptop"></i> <span class="nav-label">Dashboard</span> </a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="index.minor"><i class="fa fa-desktop"></i> <span class="nav-label">Minor page</span></a>
+                <a ui-sref="index.expenses"><i class="fa fa-desktop"></i> <span class="nav-label">Expenses</span></a>
             </li>
         </ul>
 
