--- a/app/views/main.html
+++ b/app/views/main.html
@@ -69,7 +69,7 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="label label-danger pull-right">Low value</span>
-                    <h5>Ready to sync with books</h5>
+                    <h5>Ready to sync</h5>
                 </div>
                 <div class="ibox-content">
                     <h1 class="no-margins">80,600</h1>
