Prepared for screenshots

--- a/app/views/common/navigation.html
+++ b/app/views/common/navigation.html
@@ -7,9 +7,9 @@
                     <a uib-dropdown-toggle href>
                             <span class="clear">
                                 <span class="block m-t-xs">
-                                    <strong class="font-bold">{{main.userName}}</strong>
+                                    <strong class="font-bold">John Mein</strong>
                              </span>
-                                <span class="text-muted text-xs block">Profile<b class="caret"></b></span>
+                                <span class="text-muted text-xs block">Manager<b class="caret"></b></span>
                             </span>
                     </a>
                     <ul uib-dropdown-menu="" class="animated fadeInRight m-t-xs">
