--- a/app/views/common/topnavbar.html
+++ b/app/views/common/topnavbar.html
@@ -4,11 +4,15 @@
             <span minimaliza-sidebar></span>
             <form role="search" class="navbar-form-custom" method="post" action="">
                 <div class="form-group">
-                    <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
+                    <input type="text" placeholder="Search for bills..." class="form-control" name="top-search" id="top-search">
                 </div>
             </form>
         </div>
         <ul class="nav navbar-top-links navbar-right">
+            <li>
+                <span class="m-r-sm text-muted welcome-message">Contuinity Inc.<b class="caret"></b></span>
+            </li>
+
             <li>
                 <a href="javascript:logout();">
                     <i class="fa fa-sign-out"></i> Log out
