--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,88 +6,93 @@
                     {{main.helloText}}
                 </h1>
                 <small>
-                    {{main.descriptionText}}
+                    <!-- {{main.descriptionText}} -->
                 </small>
             </div>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-lg-2">
+        <div class="col-lg-12">
+            <div class="form-group">
+                <label class="col-sm-5 control-label" style="padding-top:7px;padding-left: 0;">Select month:</label>
+                
+                    <select class="form-control m-b" name="account">
+                        <option>January</option>
+                        <option>February</option>
+                        <option>March</option>
+                        <option>April</option>
+                    </select>
+                
+            </div>
+        </div>
+     </div>
+
+    <div class="row">
+        <div class="col-lg-4">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <span class="label label-success pull-right">Monthly</span>
-                    <h5>Droped</h5>
+                    <!-- <span class="label label-success pull-right">Monthly</span> -->
+                    <h3 style="font-weight: bold;">Droped</h3>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">{{main.total}}</h1>
-                    <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
-                    <small>Total income</small>
+                    <h1 class="no-margins">257</h1>
+                    <div class="progress progress-mini">
+                        <div style="width: 0%;" class="progress-bar"></div>
+                    </div>
+                    <small>Documents received</small>
+
+                    
+                    <h1 class="no-margins">140</h1>
+                    
+                    <div class="progress progress-mini">
+                        <div style="width: 54%;" class="progress-bar progress-bar-warning"></div>
+                    </div>
+                    <small>Documents prepared</small>
                 </div>
             </div>
         </div>
-        <div class="col-lg-2">
+        
+        <div class="col-lg-4">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <span class="label label-success pull-right">Monthly</span>
-                    <h5>In recognition</h5>
+                    <!-- <span class="label label-info pull-right">Monthly</span> -->
+                    <h3 style="font-weight: bold;">In process</h3>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">{{main.total}}</h1>
-                    <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
-                    <small>Total income</small>
+                    <h1 class="no-margins">30</h1>
+                    <div class="progress progress-mini">
+                        <div style="width: 21%;" class="progress-bar progress-bar-danger"></div>
+                    </div>
+                    <small>For Approval</small>
+
+                    <h1 class="no-margins">120</h1>
+                    <div class="progress progress-mini">
+                        <div style="width: 85%;" class="progress-bar"></div>
+                    </div>
+                    <small>For reconcilationh</small>
+
                 </div>
             </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-4">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <span class="label label-info pull-right">Annual</span>
-                    <h5>In Approval</h5>
+                    <!-- <span class="label label-primary pull-right">Today</span> -->
+                    <h3 style="font-weight: bold;">Synchronized</h3>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">275,800</h1>
-                    <div class="stat-percent font-bold text-info">20% <i class="fa fa-level-up"></i></div>
-                    <small>New orders</small>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-2">
-            <div class="ibox float-e-margins">
-                <div class="ibox-title">
-                    <span class="label label-primary pull-right">Today</span>
-                    <h5>For reconcilation</h5>
-                </div>
-                <div class="ibox-content">
-                    <h1 class="no-margins">106,120</h1>
-                    <div class="stat-percent font-bold text-navy">44% <i class="fa fa-level-up"></i></div>
-                    <small>New visits</small>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-2">
-            <div class="ibox float-e-margins">
-                <div class="ibox-title">
-                    <span class="label label-danger pull-right">Low value</span>
-                    <h5>Ready to sync</h5>
-                </div>
-                <div class="ibox-content">
-                    <h1 class="no-margins">80,600</h1>
-                    <div class="stat-percent font-bold text-danger">38% <i class="fa fa-level-down"></i></div>
-                    <small>In first month</small>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-2">
-            <div class="ibox float-e-margins">
-                <div class="ibox-title">
-                    <span class="label label-danger pull-right">Low value</span>
-                    <h5>Books</h5>
-                </div>
-                <div class="ibox-content">
-                    <h1 class="no-margins">80,600</h1>
-                    <div class="stat-percent font-bold text-danger">38% <i class="fa fa-level-down"></i></div>
-                    <small>In first month</small>
+                    <h1 class="no-margins">10</h1>
+                    <div class="progress progress-mini">
+                        <div style="width: 8%;" class="progress-bar progress-bar-danger"></div>
+                    </div>
+                    <small>Prepared for sync</small>
+
+                    <h1 class="no-margins">10</h1>
+                    <div class="progress progress-mini">
+                        <div style="width: 0%;" class="progress-bar"></div>
+                    </div>
+                    <small>Synchronized</small>
                 </div>
             </div>
         </div>
@@ -96,17 +101,13 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
-                <div class="ibox-title">
-                    <h5>Dropzone Area</h5>
-
-                    <div ibox-tools></div>
-                </div>
+                
                 <div class="ibox-content">
                     <form action="#" class="dropzone dz-clickable" dropzone="" id="dropzone">
-                        <div class="dz-default dz-message"><span><strong>Drop files here or click to upload. </strong><br> (This is a place where you can drop all your expenses to be captured and approved.)</span></div>
+                        <div class="dz-default dz-message"><span><strong>Drop your bills here or click to upload. </strong><br> </span></div>
                         </form>
                     <div class="m text-right">
-                        <small>DropzoneJS is an open source library that provides drag'n'drop file uploads with image previews: <a href="https://github.com/enyo/dropzone" target="_blank">https://github.com/enyo/dropzone</a>
+                        <small>
                         </small>
                     </div>
                 </div>
