--- a/app/views/main.html
+++ b/app/views/main.html
@@ -33,7 +33,7 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <!-- <span class="label label-success pull-right">Monthly</span> -->
-                    <h3 style="font-weight: bold;">Droped</h3>
+                    <h3 style="font-weight: bold;">Dropped</h3>
                 </div>
                 <div class="ibox-content">
                     <h1 class="no-margins">257</h1>
@@ -70,7 +70,7 @@
                     <div class="progress progress-mini">
                         <div style="width: 85%;" class="progress-bar"></div>
                     </div>
-                    <small>For reconcilationh</small>
+                    <small>For reconcilation</small>
 
                 </div>
             </div>
