--- a/app/views/expenses.html
+++ b/app/views/expenses.html
@@ -87,7 +87,15 @@
                             </div>
 
                             <div class="form-group">
-                                <div class="col-sm-12"><input type="text" class="form-control" ng-change="changeInvoiceData('SupplierName')" ng-model="expense.Account"></div>
+                                <div class="col-sm-12">
+                                <select class="form-control m-b" name="account">
+                                    <option>Marketing</option>
+                                    <option>Office supply</option>
+                                    <option>Reimbursement</option>
+                                    <option>Transport</option>
+                                </select>
+                                </div>
+                                <!-- <div class="col-sm-12"><input type="text" class="form-control" ng-change="changeInvoiceData('SupplierName')" ng-model="expense.Account"></div> -->
                             </div>
 
                             <div class="form-group"><label class="col-sm-12 control-label" style="text-align: left;">Invoice No</label></div>
