--- a/app/views/expenses.html
+++ b/app/views/expenses.html
@@ -32,7 +32,7 @@
                             <tr>
                                 <!-- <th><input icheck type="checkbox" ng-model="checkAll"></th> -->
                                 <th>Expense</th>
-                                <th class="pull-right">Total</th>
+                                <th class="pull-right" data-type="numeric">Total</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -41,15 +41,15 @@
                                 ng-class="eIndex==selectedRow?'selected':''" footable-post-repeat-directive>
                                 <!-- <td>
                                     <input icheck type="checkbox" ng-model="check1"></td>-->
-                                <td> 
+                                <td data-value="{{e.get('SupplierName')}}"> 
                                     <small class="pull-right text-muted">{{e.get('InvoiceDate').toLocaleDateString();}}</small>
                                     
                                     <strong>{{e.get('SupplierName')}}</strong>
                                     <div class="small m-t-xs">
-                                        <p>{{e.get('uploadedByTitle');}}</p>
+                                        <p>{{e.get('AccountTitle');}}</p>
                                     </div>
                                 </td>
-                                <td><strong class="pull-right">
+                                <td data-value="{{e.get('Total')}}"><strong class="pull-right">
                                 {{toMoney(e.get('Total'))}}</script>
                                 </strong></td>
 
@@ -88,7 +88,7 @@
 
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                <select class="form-control m-b" name="account">
+                                <select class="form-control m-b" name="account" ng-change="changeInvoiceData('AccountTitle')" ng-model="expense.AccountTitle">
                                     <option>Marketing</option>
                                     <option>Office supply</option>
                                     <option>Reimbursement</option>
