--- a/app/views/expenses.html
+++ b/app/views/expenses.html
@@ -1,16 +1,26 @@
 
 
 <div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-lg-12">
-       <!--  <h2>Expenses</h2> -->
+    <div class="col-lg-8">
+        <h2>Approval</h2>
         <ol class="breadcrumb">
             <li>
                 <a href="index.html">Home</a>
             </li>
             <li class="active">
-                <strong>Expenses</strong>
+                <strong>In process</strong>
             </li>
         </ol>
+    </div>
+    <div class="col-lg-4">
+        <div class="title-action">
+            <div class="btn-group" role="group">
+                <a type="button" class="btn btn-outline btn-success" ng-class="approvalFilter=='InProcess'?'active':''" ng-click="approvalFilter='InProcess'"><i class="fa fa-edit"></i> For Approval </a>
+                <a type="button" class="btn btn-outline btn btn-outline btn-success" ng-class="approvalFilter=='NotAppoved'?'active':''" ng-click="approvalFilter='NotAppoved'"><i class="fa fa-calculator "></i> For Reconcilation</a>
+                <a type="button" class="btn btn-outline btn-primary" ng-class="approvalFilter=='NotReconciled'?'active':''" ng-click="approvalFilter='NotReconciled'"><i class="fa fa-check "></i> Completed</a>
+                <a type="button" class="btn btn-outline btn-default" ng-class="approvalFilter==''?'active':''" ng-click="approvalFilter=''"><i class="fa fa-list"></i> All</a>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -42,15 +52,24 @@
                                 <!-- <td>
                                     <input icheck type="checkbox" ng-model="check1"></td>-->
                                 <td> 
-                                    <small class="pull-right text-muted">{{e.get('InvoiceDate').toLocaleDateString();}}</small>
+                                    <!-- <span ng-class="(e.Account==null)||(e.Account=='')?'label label-warning':'label label-primary'">{{e.Account?'OK':'Preparation'}}</span>
+                                    <i class="fa fa-check-circle-o" ng-style="(e.Account==null)||(e.Account=='')?{'color': '#18a689'}:''" aria-hidden="true"></i> -->
+
                                     
-                                    <strong>{{e.get('SupplierName')}}</strong>
+                                    <!-- <i ng-hide="(e.Account==null)||(e.Account=='')" class="fa fa-check-circle-o" style="color:#18a689;" aria-hidden="true"></i>
+                                    <i ng-hide="(e.Account!=null)&&(e.Account!='')" class="fa fa-check-circle-o" style="color:#ed5565;" aria-hidden="true"></i> -->
+                                     
+                                    <i class="fa fa-circle" ng-class="(e.Account!=null)&&(e.Account!='')?'text-navy':'text-warning'"></i>
+
+                                    <small class="pull-right text-muted">{{toMoment(e.InvoiceDate)}}</small>
+                                    
+                                    <strong>{{e.Account}}</strong>
                                     <div class="small m-t-xs">
-                                        <p>{{e.get('uploadedByTitle');}}</p>
+                                        <p>{{e.uploadedByTitle;}}</p>
                                     </div>
                                 </td>
                                 <td><strong class="pull-right">
-                                {{toMoney(e.get('Total'))}}</script>
+                                {{toMoney(e.Total)}}</script>
                                 </strong></td>
 
                             </tr>
@@ -71,8 +90,10 @@
         <div class="col-lg-9">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
+                    
+                    
+                    
                     <h5>Document</h5>
-
                     <!-- <div ibox-tools> </div> -->
                 </div>
 
@@ -88,7 +109,7 @@
 
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                <select class="form-control m-b" name="account">
+                                <select class="form-control m-b" name="account" ng-model="expense.Account">
                                     <option>Marketing</option>
                                     <option>Office supply</option>
                                     <option>Reimbursement</option>
@@ -111,7 +132,7 @@
                             <div class="form-group">
                                 <div class="col-sm-12">
                                     <div class="input-group date"> 
-                                        <input type="date-time" class="form-control" date-time ng-model="expense.InvoiceDate" min-view="date" max-view="year" view="date" auto-close="true">
+                                        <input type="date-time" class="form-control" date-time ng-model="temp.InvoiceDate" min-view="date" max-view="year" view="date" auto-close="true">
                                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                     </div>
                                 <!-- <my-date-time-picker></my-date-time-picker> -->
@@ -125,7 +146,7 @@
                             <div class="form-group">
                                 <div class="col-sm-12">
                                     <div class="input-group date"> 
-                                        <input type="date-time" class="form-control" date-time ng-model="expense.DueDate" min-view="date" max-view="year" view="date" auto-close="true">
+                                        <input type="date-time" class="form-control" date-time ng-model="temp.DueDate" min-view="date" max-view="year" view="date" auto-close="true">
                                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                     </div>
                                 <!-- <my-date-time-picker></my-date-time-picker> -->
@@ -152,7 +173,9 @@
                             <div class="form-group"><label class="col-sm-3 control-label">Total</label>
                                 <div class="col-sm-9"><input type="number" class="form-control" ng-change="changeInvoiceData('Total')" ng-model="expense.Total" ng-disabled="true"></div>
                             </div>
-
+                            <div><span class="pull-right">
+                            <a type="button" class="btn btn-primary"><i class="fa fa-calendarmagic "></i> Approve</a>
+                            </span></div>
                         </form>
                     </div>
                     <div class="col-md-9">
