--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,6 +7,7 @@
                 </h1>
                 <small>
                     <!-- {{main.descriptionText}} -->
+                    {{profile.name}}
                 </small>
             </div>
         </div>
